--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -58,5 +58,10 @@
 	<string id="31401">Delete</string>
 	<string id="31402">Space</string>
 	<string id="31403">Clear</string>
+	<string id="31404">Movies</string>
+	<string id="31405">TV Shows</string>
+	<string id="31406">Artists</string>
+	<string id="31407">Albums</string>
+	<string id="31408">Songs</string>
 	
 </strings>
