--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -75,7 +75,7 @@ Hide Extra Show Details: Will remove the line that lists Year, Duration, Genre a
 Hide Episode Totals: Will remove the total number of episodes listed above the poster
 Hide Text Rating on Movie List:  Will remove the Text Rating of the movie that is on the list itself in a circle type border
 Hide Media Flags in Info Area: Will Remove all the media flags (720p, etc) in the area that the video is detailed
-Show Help: Not implemented yet :)
+Hide Help:  Remove this help from the home page menu
 
 The Developer section is for developers mostly.
 
