--- a/language/Swedish/strings.xml
+++ b/language/Swedish/strings.xml
@@ -28,16 +28,17 @@
 
 <!--  Skin Preferences  -->
 	<string id="31101">Visa bildspel</string>
-	<string id="31102">Anpassad bildspel</string>
+	<string id="31102">Anpassat bildspel</string>
 	<string id="31103">Bildspel bilder</string>
 	<string id="31104">Visa "On Deck" före</string>
-	<string id="31105">Visa Power meny</string>
+	<string id="31105">Visa Systemet meny</string>
 	<string id="31106">Avsluta</string>
 	<string id="31107">Vila</string>
 	<string id="31108">Stäng av</string>
 	<string id="31109">Visa</string>
 	<string id="31110">Hem</string>
 	<string id="31111">Bildspel</string>
+	<string id="31112">Systemet</string>
 
 <!--  Preferences  -->
 	<string id="31200">Inställningar</string>
