--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -65,7 +65,7 @@
 <!--  Search  -->
 	<string id="31400">Buscar</string>
 	<string id="31401">Borrar</string>
-	<string id="31402">Espacio>
+	<string id="31402">Espacio></string>
 	<string id="31403">Restaurar</string>
 	<string id="31404">Películas</string>
 	<string id="31405">Series de TV</string>
